--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Gith
+title: Gith blog
 subtitle:
-description:
+description: Gith's personal blog
 keywords:
-author: tackelua
+author: Gith
 language: en
 timezone: "Asia/Ho_Chi_Minh"
 
@@ -39,19 +39,19 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-    enable: true
-    line_number: true
-    auto_detect: false
-    tab_replace:
+  enable: true
+  line_number: true
+  auto_detect: false
+  tab_replace:
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-    path: ""
-    per_page: 10
-    order_by: -date
+  path: ""
+  per_page: 10
+  order_by: -date
 
 # Category & Tag
 default_category: uncategorized
@@ -78,4 +78,4 @@ theme: cactus
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-    type:
+  type:
